samples/_failures_safe/1761042041_6879f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0462ce06.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_0462ce06.c:129:21: error: expected declaration or statement at end of input
  129 |                     decreaseKey(heap, v, dist[v]);
      |                     ^~~~~~~~~~~
./samples/SAFE/__tmp_0462ce06.c:129:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0462ce06.c:129:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0462ce06.c:129:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0462ce06.c:129:21: error: expected declaration or statement at end of input
